<resources>
    <string name="app_name">SaberGo</string>
    <string name="facebook_app_id">200353460445301</string>
    <string name="strYear">2018</string>

    --Login
    <string name="strSignup">Registrarse</string>
    <string name="strLogin">Iniciar Sesión</string>
    --Signup
    <string name="strSubtittleSignUp">Crea tu cuenta</string>
    --Profile
    <string name="strDelete">¿Está seguro que desea eliminar toda la información de Saber GO ?</string>
    --Tutorial
    <string name="strTut01">En la App Saber Go encontrarás 3 módulos para que de diferentes maneras puedas entrenar y evaluar tus
    conocimientos para la prueba Saber 11. Para ingresar al Módulo diagnóstico  busca el botón:</string>

    <string name="strTut02">En el examen Dignóstico se presentarán 30 preguntas tipo ICFES para que sean respondidas en el tiempo correspondiente.
        En caso de no alcanzar en el tiempo aparecera una nueva pantalla con el siguiente Icono:</string>
    <string name="strTut03">El segundo módulo es el de "Preguntas Rápidas", en este módulo se generarán 5 preguntas de cada área que evalua la prueba Saber 11.
    Para ingresar a las preguntas rápidas busca el botón:
    </string>
    <string name="strTut04">En este módulo tienes que responder la pregunta que se halla seleccionado en el tiempo correspondiente. Cada vez que respondas una pregunta en
        cualquier módulo obtendras puntos de experiencia, fragmentos de las áreas y dinero de la aplicación. Para visualizar todo tu progreso, busca el siguiente botón que
    te llevará a tu Perfil:</string>
    <string name="strTut05">El último módulo de la aplicación se denomina "Meteoritos"; para poder utilizarlo correctamente es necesario que descarges e imprimas el
    codigo QR para que puedas visualizar "el planeta de Saber GO", el marcador puede ser descargando dirigiendose en el apartado de
         Acerca de en el menú principal desplegable.</string>

    <string name="strTut06">Explora "el planeta Saber GO" y protegelo de los meteoritos que se acercan, si logras destruir uno se te consedera la oportunidad de responder una pregunta que te otorgará
    valiosas recompensas en tu Perfil.</string>
    <string name="strTut07">Busca en tu perfil los logros que se pueden desbloquear, sube de Nivel, Rango y conviértete en "Comandante del espacio". Para ingresar a los Logros busca el Icono del trofeo
        en tu perfil o en el menú desplegable.</string>
    <string name="strTut08">También puedes revisar los tips en tu perfil para que lleges mejor preparado para tu prueba Saber 11. Para lo anterior busca el icono del bombillo en tu perfil: </string>

    <string name="strTut09">No siendo más, mucha suerte y éxitos preparándote para tu prueba Saber 11. Atentamente, Equipo de Saber GO.</string>


    -- No Internet
    <string name="strNoInternet">Lo sentimos, pero necesitas estar conectado a internet para continuar.</string>
    <string name="strVolverInternet">Volver</string>

    -- Menú Principal
    <string name="strSubtitMenu">Menú Principal</string>
    <string name="strBtnPruebaDiag">Examen Diagnóstico</string>
    <string name="strBtnIniciarSesion">Iniciar sesión</string>
    <string name="strBtnPruebaDiaria">Preguntas Rápidas</string>
    <string name="strBtnRegistrarse">Registrarse</string>
    <string name="strBtnTutorial">Tutorial</string>
    <string name="strBtnLudica">Meteoritos</string>
    <string name="strBtnLogros">Logros</string>
    <string name="strBtnPerfil">Perfil</string>
    <string name="strBtnConfiguracion">Configuración</string>
    <string name="strBtnCompartir">Compartir</string>
    <string name="strBtnAcercade">Acerca de</string>
    <string name="strBtnSalir">Cerrar Sesion</string>

    -- Prueba Diagnostico
    <string name="strOpcionA">A</string>
    <string name="strOpcionB">B</string>
    <string name="strOpcionC">C</string>
    <string name="strOpcionD">D</string>
    <string name="strCorrectas">0/50</string>
    <string name="strIncorrectas">0/50</string>
    <string name="strTime">00:00</string>

    -- Achievments

    <string name="strLog01">Subir a nivel 20</string>
    <string name="strLog02">Responde 50 preguntas del área de matemáticas</string>
    <string name="strLog03">Responde 50 preguntas del área de lectura crítica</string>
    <string name="strLog04">Responde 50 preguntas del área de ciencias sociales</string>
    <string name="strLog05">Responde 50 preguntas del área de ciencias naturales</string>
    <string name="strLog06">Responde 50 preguntas del área de inglés</string>
    <string name="strLog07">Finaliza 10 exámenes diagnóstico</string>
    <string name="strLog08">Destruye un total de 50 meteoritos</string>

    <string name="strLogTit01">Logro 01: El comienzo del viaje</string>
    <string name="strLogTit02">Logro 02: Be Rational, Get Real!</string>
    <string name="strLogTit03">Logro 03: El Come Libros</string>
    <string name="strLogTit04">Logro 04: El Conocimiento es poder</string>
    <string name="strLogTit05">Logro 05: Yeah Science B*tch</string>
    <string name="strLogTit06">Logro 06: Éeexito</string>
    <string name="strLogTit07">Logro 07: Doctor Diagnostic</string>
    <string name="strLogTit08">Logro 08: Salvador del Universo</string>
    <string name="strLogTit09">Logro 09: Redes Sociales Espaciales</string>

    -- Common
    <string name="strTitulo">Saber GO</string>
    <string name="strTituloLogin">Saber GO</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_modulo_preguntas_diarias">ModuloPreguntasDiarias</string>
    <string name="x">X</string>

</resources>

