<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itmTutorial"
            android:icon="@drawable/ic_action_tutorial"
            android:title="@string/strBtnTutorial" />
        <item
            android:id="@+id/itmPruebaDiagnostico"
            android:icon="@drawable/ic_action_exam"
            android:title="@string/strBtnPruebaDiag" />
        <item
            android:id="@+id/itmPruebaDiaria"
            android:icon="@drawable/ic_action_pruebarapida"
            android:title="@string/strBtnPruebaDiaria" />
        <item
            android:id="@+id/itmLudica"
            android:icon="@drawable/ic_action_ar"
            android:title="@string/strBtnLudica" />
        <item
            android:id="@+id/itmLogros"
            android:icon="@drawable/ic_action_logros"
            android:title="@string/strBtnLogros" />
        <item
            android:id="@+id/itmSettings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/strBtnConfiguracion" />
    </group>

    <item android:title="Otros">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/strBtnCompartir" />
            <item
                android:id="@+id/itmAbout"
                android:icon="@drawable/ic_action_about"
                android:title="@string/strBtnAcercade" />
            <item
                android:id="@+id/itmExit"
                android:icon="@drawable/ic_action_exit"
                android:title="@string/strBtnSalir" />
        </menu>
    </item>

</menu>
