<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimarySG"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.michaelsinner.sabergo.Activities.PruebaDiagnostico">



    <ImageButton
        android:id="@+id/imBtnPregunta"
        android:layout_width="450dp"
        android:layout_height="360dp"

        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="83dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strOpcionA"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="27dp"
        android:layout_above="@+id/tvTime"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strOpcionB"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="26dp"
        android:layout_above="@+id/progressBar2"
        android:layout_toEndOf="@+id/btnA" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strOpcionC"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="26dp"
        android:layout_alignBaseline="@+id/btnB"
        android:layout_alignBottom="@+id/btnB"
        android:layout_toEndOf="@+id/btnB" />

    <Button
        android:id="@+id/btnD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strOpcionD"
        tools:layout_editor_absoluteX="362dp"
        tools:layout_editor_absoluteY="26dp"
        android:layout_alignBaseline="@+id/btnC"
        android:layout_alignBottom="@+id/btnC"
        android:layout_toEndOf="@+id/btnC" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTime"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="-8dp"

        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"

        android:layout_marginEnd="142dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/btnD" />

    <TextView
        android:id="@+id/tvCorrectas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCorrectas"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_alignTop="@+id/progressBar2"
        android:layout_alignParentStart="true" />
</RelativeLayout>
