<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uan.michaelsinner.sabergo.Activities.Tutorial$PlaceholderFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSubTitleOne"
            android:paddingTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Tutorial 1/3"
            android:textSize="28dp" />

        <TextView
            android:paddingTop="4dp"
            android:id="@+id/tvSubTitleOne2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/strTut01"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnPruebaDiagnostico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_shape02"
            android:shadowColor="#EBD519"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2"
            android:text="@string/strBtnPruebaDiag"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvSubTitleTwo"
            android:layout_below="@+id/gif01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/strTut02"
            android:textSize="20dp" />

        <ImageButton
            android:id="@+id/imglog02"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/time_out" />

        <TextView
            android:id="@+id/tvSubTitleTrhe"
            android:layout_below="@+id/gif02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/strTut03"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnPruebasDiarias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_shape02"
            android:shadowColor="#0B356D"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/strBtnPruebaDiaria"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="30dp" />

        <TextView
            android:layout_below="@+id/gif02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strTut04"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_shape02"
            android:shadowColor="#227f12"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/strBtnPerfil"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="30dp" />

        <TextView
            android:layout_below="@+id/gif02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="(Para continuar el tutorial desliza hacia la izquierda)"
            android:textSize="16dp" />




    </LinearLayout>

</ScrollView>
