<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_index"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimarySG"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.michaelsinner.sabergo.Index">

    <TextView
        android:text="@string/strTitulo"
        android:textColor="@color/colorTitle"
        android:textSize="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/tvTitleLogin" />

    <Button
        android:text="@string/strSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegistrarse"
        android:layout_below="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin"
        android:layout_marginTop="25dp"
        android:layout_alignEnd="@+id/btnLogin" />

    <Button
        android:text="@string/strLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/tvTitleLogin"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
