<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_menu"
    android:background="@drawable/background03"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.uan.michaelsinner.sabergo.Activities.MainMenu"
    tools:showIn="@layout/app_bar_main_menu">


    <Button
        android:id="@+id/btnPruebaDiagnostico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvPruebaMenu"
        android:layout_marginTop="68dp"
        android:background="@drawable/btn_shape02"
        android:shadowColor="#EBD519"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="2"
        android:text="@string/strBtnPruebaDiag"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btnMeteoros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/strBtnLudica"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:background="@drawable/btn_shape02"
        android:textColor="#FFFFFF"
        android:shadowColor="#F76800"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="30dp"
        android:layout_below="@+id/btnPruebasDiarias"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnPerfil"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnPruebasDiarias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/strBtnPruebaDiaria"
        android:background="@drawable/btn_shape02"
        android:textColor="#FFFFFF"
        android:shadowColor="#0B356D"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="30dp"
        android:layout_below="@+id/btnPruebaDiagnostico"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:text="@string/strBtnPerfil"
        android:background="@drawable/btn_shape02"
        android:textColor="#FFFFFF"
        android:shadowColor="#227f12"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="30dp"
        android:layout_below="@+id/btnMeteoros"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tvPruebaMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        />

    <TextView
        android:id="@+id/tvPruebaUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="nothing"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
